# Valorant-Nuzlocke-Tracker

./: .gitignore  README.md  capacitor.config.json  fixColor.js  package-lock.json  package.json  publish.bat  publish.ps1  walkthrough.md
android/app/: build.gradle
android/app/src/main/java/com/horrid12/nuztrack/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: index.html  main.js  preload.js  renderer.js  style.css
src-tauri/: Cargo.toml  Start.bat  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
