[package]
name = "nuztrack"
version = "2.0.0"
description = "Valorant Nuzlocke tracker built with Tauri"
authors = ["Horrid-12"]
edition = "2021"

[lib]
name = "nuztrack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
